--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -25,6 +25,10 @@
       name: docker
       state: started
       enabled: true
+  - name: Stop already existing containers
+    command: sudo docker stop $(docker ps -aq)
+  - name: Remove stopped containers
+    command: sudo docker rm $(docker ps -aq)
   - name: deploy myTestApp application
     command: sudo docker run --name tomcat -it -d -p 8888:8888 anupabenny/images-repo1:tomcat-MyTestApp-image
   handlers:
